# masv0

./: .gitignore  KivyMD fixes for uv (Linux & MacOS).sh  KivyMD fixes for uv (Windows).bat  README.md  app.kv  credentials.json  file_upload.py  kivymd-1.2.0-py3-none-any.whl  main.py  pyproject.toml  requirements.txt
Train/: cptest1.py  plot_loss_and_grad_norm.py  test3.py  train_config.yaml  training.py
Train/checkpoint-23000/: adapter_config.json  trainer_state.json
Train/checkpoint-24000/: rng_state.pth  scheduler.pt  trainer_state.json
Train/runs/bart-lora/: export_model.py
Train/runs/bart-lora/checkpoint-1000/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
Train/runs/bart-lora/checkpoint-1200/: rng_state.pth  scheduler.pt  trainer_state.json
Train/runs/bart-lora/checkpoint-1400/: rng_state.pth  scheduler.pt  trainer_state.json
Train/runs/bart-lora/checkpoint-1500/: scheduler.pt  trainer_state.json
Train/runs/bart-lora/checkpoint-1600/: rng_state.pth  scheduler.pt  trainer_state.json
Train/runs/bart-lora/checkpoint-1800/: rng_state.pth  scheduler.pt  trainer_state.json
Train/runs/bart-lora/checkpoint-200/: rng_state.pth  scheduler.pt  trainer_state.json
Train/runs/bart-lora/checkpoint-2000/: rng_state.pth  scheduler.pt  trainer_state.json
Train/runs/bart-lora/checkpoint-2200/: adapter_config.json  rng_state.pth  scheduler.pt  (+1 more)
Train/step-23000/: rng_state.pth  scheduler.pt
Train/step-23500/: rng_state.pth  scheduler.pt  trainer_state.json
contents/: chat.py
masv0.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+38 files in other folders)
